--- a/dz4.ipynb
+++ b/dz4.ipynb
@@ -2803,9 +2803,9 @@
     }
    ],
    "source": [
-    "print('Кластер 0: {:.2f}'.format(y_test[labels_test == 0].mean()))\n",
-    "print('Кластер 1: {:.2f}'.format(y_test[labels_test == 1].mean()))\n",
-    "print('Кластер 2: {:.2f}'.format(y_test[labels_test == 2].mean()))"
+    "print('Claster 0: {:.2f}'.format(y_test[labels_test == 0].mean()))\n",
+    "print('Claster 1: {:.2f}'.format(y_test[labels_test == 1].mean()))\n",
+    "print('Claster 2: {:.2f}'.format(y_test[labels_test == 2].mean()))"
    ]
   }
  ],
